--- a/AKchatApp/src/app/footer/footer.component.html
+++ b/AKchatApp/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="border-top border-dark">
-    <div class="mt-2 text-center">
+<footer class="border-dark footer">
+    <div class="mt-2 text-center" style="color: white;">
         <h6>Copyright &copy; {{currentYear}} <a class="text-danger">ChatApp</a></h6>
     </div>
 </footer>
