--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.css
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.css
@@ -27,15 +27,50 @@
 }
 
 .user-list{
-    height: 512px;
-    overflow-y: auto
+    height: 700px;
+    overflow-y: auto;
+    border:0px;
+    box-shadow: 3px 3px 13px -3px #888888;
+
+}
+
+.g-chat{
+    border:0px;
+    box-shadow: 3px 3px 13px -3px #888888;
 }
 .btn-group{
     padding: 5px;
+    background-color: white;
+    border :0px;
+    box-shadow: 3px 3px 13px -3px #888888;
+
 }
 
  .user-image{
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     border-radius: 50%;
+    border: solid green 1px;
+}
+
+.users{
+    /* background-color: #eaeaea; */
+    border: 0px;
+    background-color: white;
+    box-shadow: 3px 3px 13px -3px #888888;
+}
+
+
+
+.card-body{
+    background-color:#f8f8f8 ;
+}
+
+.cgroup{
+    background-color: rgb(25, 135, 84);
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white
 }
