--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -22,8 +22,8 @@
       </div>
       <div class="dropdown mb-0 d-flex">
         <div>
-          <button class="btn btn-danger btn-sm me-3" type="button" [routerLink]="['/gallery']"><i
-              class="bi bi-images"></i> &nbsp; photo-gallery</button>
+          <button class="btn btn-danger btn-sm me-3 gallery-btn" type="button" [routerLink]="['/gallery']"><i
+              class="bi bi-images"></i></button>
         </div>
         <div>
           <img class="user-image me-2" [src]="this.service.imageUrl" alt="">
