commit for notifications

--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.css
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.css
@@ -74,3 +74,9 @@
     justify-content: center;
     color:white
 }
+.mat-form-field{
+    display: block !important;
+}
+/* .cdk-overlay-pane{
+    top:500px !important;
+} */
