--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -21,9 +21,9 @@
         <span class="navbar-brand mb-0 h1">Chat Application</span>
       </div>
       <div class="dropdown mb-0 d-flex">
-        <div style="display: flex;align-items: center;" class="position-relative">
-          <i class="bi bi-bell me-2" style="color: white; font-size: large;"></i>
-          <span class="border rounded-circle msgdot position-absolute justify-content-center align-items-center d-flex text-danger fw-bolder">{{service.countmsg}}</span>
+        <div style="display: flex;align-items: center;" class="position-relative" (click)="openNotiDialogue()">
+          <i class="bi bi-bell me-2" style="color: white; font-size: 22px;"></i>
+          <span class="border rounded-circle msgdot position-absolute justify-content-center align-items-center d-flex fw-bolder" style="color:rgb(25, 135, 84)" *ngIf="this.service.countmsg>0">{{service.countmsg}}</span>
        </div>  
         <div>
           <button class="btn btn-danger btn-sm me-3 gallery-btn" type="button" [routerLink]="['/gallery']"><i
