--- a/AKchatApp/src/app/chat/private-chats/private-chats.component.html
+++ b/AKchatApp/src/app/chat/private-chats/private-chats.component.html
@@ -25,7 +25,7 @@
             <h3>Messages</h3>
         </div>
         <div class="card-body card-messages">
-            <app-messages [messages]="service.privateMessages"></app-messages>
+            <app-messages [messages]="service.privateMessages" [username]="msgid" [scrollautomatic]="scrollautomatic"></app-messages>
             <div *ngIf="service.isTyping">
                 <span class="fw-bolder text-primary">{{service.username}}</span><span><img src="/assets/img/indityp.gif"
                         style="mix-blend-mode: multiply;height:25px;width:60px"></span>
