gallery and story in process

--- a/AKchatApp/src/app/header/header.component.html
+++ b/AKchatApp/src/app/header/header.component.html
@@ -27,7 +27,7 @@
        </div>  
         <div>
           <button class="btn btn-danger btn-sm me-3 gallery-btn" type="button" [routerLink]="['/gallery']"><i
-              class="bi bi-images"></i></button>
+              class="bi bi-images" style=" font-size: larger;"></i></button>
         </div>
         <div>
           <img class="user-image me-2" [src]="this.service.imageUrl" alt="">
